--- a/web/index.html
+++ b/web/index.html
@@ -180,6 +180,59 @@
         .node-ip { color: var(--accent); font-family: inherit; }
         .node-location { color: var(--muted); margin-left: 10px; }
 
+        /* Slider control */
+        .control-row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 12px;
+            padding-bottom: 12px;
+            border-bottom: 1px solid rgba(255,255,255,0.06);
+        }
+        .control-row label {
+            font-size: 11px;
+            color: var(--muted);
+            text-transform: lowercase;
+            letter-spacing: 0.6px;
+        }
+        input[type=range] {
+            -webkit-appearance: none;
+            width: 60%;
+            background: transparent;
+        }
+        input[type=range]:focus { outline: none; }
+        input[type=range]::-webkit-slider-runnable-track {
+            width: 100%;
+            height: 4px;
+            cursor: pointer;
+            background: rgba(255,255,255,0.12);
+            border-radius: 2px;
+        }
+        input[type=range]::-webkit-slider-thumb {
+            height: 12px;
+            width: 12px;
+            border-radius: 50%;
+            background: var(--accent);
+            cursor: pointer;
+            -webkit-appearance: none;
+            margin-top: -4px;
+        }
+        input[type=range]::-moz-range-track {
+            width: 100%;
+            height: 4px;
+            cursor: pointer;
+            background: rgba(255,255,255,0.12);
+            border-radius: 2px;
+        }
+        input[type=range]::-moz-range-thumb {
+            height: 12px;
+            width: 12px;
+            border: none;
+            border-radius: 50%;
+            background: var(--accent);
+            cursor: pointer;
+        }
+
         /* Leaflet popup override */
         .leaflet-popup-content-wrapper {
             background: rgba(0, 0, 0, 0.9) !important;
@@ -197,6 +250,19 @@
         #node-list::-webkit-scrollbar-track { background: transparent; }
         #node-list::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.12); }
         #node-list::-webkit-scrollbar-thumb:hover { background: rgba(255,255,255,0.18); }
+
+        @media (max-width: 760px) {
+            /* Hide zoom controls on mobile to prevent overlap with bottom panel */
+            .leaflet-control-zoom { display: none; }
+
+            /* Larger slider thumb for easier touch interaction */
+            input[type=range]::-webkit-slider-thumb {
+                height: 20px; width: 20px; margin-top: -8px;
+            }
+            input[type=range]::-moz-range-thumb {
+                height: 20px; width: 20px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -207,7 +273,6 @@
             <img class="logo" src="/blocknet.png" alt="blocknet" />
             <span class="name">blocknet</span>
             <span class="sub">nodes</span>
-        </div>
 
         <div class="stat-row">
             <span class="stat-label">Nodes</span>
@@ -227,6 +292,10 @@
 
     <div id="node-list" class="panel">
         <h2># node list</h2>
+        <div class="control-row">
+            <label for="conn-opacity">connections</label>
+            <input type="range" id="conn-opacity" min="0" max="100" value="100">
+        </div>
         <div id="nodes-container"></div>
     </div>
 
@@ -308,6 +377,7 @@
 
         let markers = L.layerGroup().addTo(map);
         let nodeData = [];
+        let connOpacity = 1.0;
 
         async function fetchNodes() {
             try {
@@ -416,7 +486,7 @@
                 renderer: connectionRenderer,
                 color: arcColor,
                 weight: 5,
-                opacity: 0.08,
+                opacity: 0.08 * connOpacity, // Glow opacity (background)
                 lineCap: 'round',
                 interactive: false,
             };
@@ -424,7 +494,7 @@
                 renderer: connectionRenderer,
                 color: arcColor,
                 weight: 2,
-                opacity: 0.42,
+                opacity: 0.42 * connOpacity, // Main line opacity (foreground)
                 dashArray: '4 6',
                 lineCap: 'round',
                 interactive: false,
@@ -662,6 +732,16 @@
             if (mobileNow === wasMobile) return;
             wasMobile = mobileNow;
             setNodeListCollapsed(wasMobile);
+        });
+
+        // Connection opacity slider.
+        document.getElementById('conn-opacity').addEventListener('input', (e) => {
+            connOpacity = parseInt(e.target.value, 10) / 100;
+            connections.eachLayer(layer => {
+                // Glow is weight 5, Arc is weight 2.
+                const base = (layer.options.weight === 5) ? 0.08 : 0.42;
+                layer.setStyle({ opacity: base * connOpacity });
+            });
         });
 
         // Initial fetch + auto-refresh every 60s.
