--- a/web/index.html
+++ b/web/index.html
@@ -127,6 +127,7 @@
                 overflow: hidden;
             }
             #node-list.collapsed #nodes-container { display: none; }
+            #node-list.collapsed .control-row { display: none; }
             #node-list h2 { margin-bottom: 0; }
 
             .toggle-btn { display: block; }
@@ -273,6 +274,7 @@
             <img class="logo" src="/blocknet.png" alt="blocknet" />
             <span class="name">blocknet</span>
             <span class="sub">nodes</span>
+        </div>
 
         <div class="stat-row">
             <span class="stat-label">Nodes</span>
